# user/userValidator.js
@@ -38,7 +38,23 @@ function validateLogin(req, res, next) {
         return res.json({ code: code.badRequest, message: msg.invalidBody })
     }
 }
+function validateSocialLogin(req, res, next) {
+    if (req.body.name && req.body.isSocialLogin && req.body.socialId) {
+        let name = req.body.name.trim(),
+            isSocialLogin = req.body.isSocialLogin.trim(),
+            socialId = req.body.socialId.trim()
 
+        if (name && isSocialLogin && socialId) {
+            next();
+        }
+        else {
+            return res.json({ code: code.badRequest, message: msg.invalidBody })
+        }
+    }
+    else{
+        return res.json({ code: code.badRequest, message: msg.invalidBody })
+    }
+}
 async function verifyUserToken(req, res, next) {
     let token = req.headers['authorization']
 
@@ -86,5 +102,6 @@ module.exports = {
     validateSignUp,
     validateLogin,
     verifyUserToken,
-    validateBody
+    validateBody,
+    validateSocialLogin
 }
